# libexpidus1ui

./: .gitignore  .gitlab-ci.yml  Makefile.am  NEWS  README.md  THANKS  TODO  autogen.sh  configure.ac.in
docs/: Makefile.am  libexpidus1ui-docs.xml  libexpidus1ui-sections.txt  libexpidus1ui.types
expidus1-about/: Makefile.am  contributors.h  expidus1-about-dialog.glade  expidus1-about.desktop.in  main.c  system-info.c  system-info.h
glade/: Makefile.am  libexpidus1ui-2.xml.in  libexpidus1ui-glade.c
glade/icons/16x16/: Makefile.am
glade/icons/22x22/: Makefile.am
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
libexpidus1kbd-private/: Makefile.am  expidus-shortcut-dialog.c  expidus-shortcut-dialog.h  expidus-shortcuts-eswm1.c  expidus-shortcuts-eswm1.h  expidus-shortcuts-grabber.c  expidus-shortcuts-grabber.h  expidus-shortcuts-provider.c  expidus-shortcuts-provider.h  expidus-shortcuts-xfwm4.c  expidus-shortcuts.c  expidus-shortcuts.h  expidus1-keyboard-shortcuts.xml  libexpidus1kbd-private-3.pc.in
libexpidus1ui/: Libexpidus1ui-2.0.gir  Libexpidus1ui-2.0.typelib  Makefile.am  abicheck.sh  expidus-dialogs.c  expidus-dialogs.h  expidus-filename-input.c  expidus-filename-input.h  expidus-gdk-extensions.c  expidus-gdk-extensions.h  expidus-gtk-extensions.c  expidus-gtk-extensions.h  expidus-sm-client.c  expidus-sm-client.h  expidus-spawn.c  expidus-spawn.h  expidus-titled-dialog.c  expidus-titled-dialog.h  libexpidus1ui-1.pc.in  libexpidus1ui-2.deps  libexpidus1ui-2.pc.in  libexpidus1ui-config.c  libexpidus1ui-config.h.in  libexpidus1ui-dialog-ui.ui  libexpidus1ui-private.h  libexpidus1ui.gresource.xml  libexpidus1ui.h  libexpidus1ui.symbols  make-libexpidus1ui-alias.pl
po/: POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  (+26 more)
python-example/: test-introspection.py
tests/: Makefile.am  test-ui.c
